--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,17 +7,19 @@ services:
     build:
       context: .
       dockerfile: ./provision/app/Dockerfile
-    command: uvicorn core.main:app --host 0.0.0.0 --port 5000 --reload
+    command: uvicorn app.core.main:app --host 0.0.0.0 --port 5000 --reload
     env_file:
       - .env
     stdin_open: true
     tty: true
     volumes:
       - ./src:/usr/src
+    depends_on:
+      - db
 
   db:
     restart: always
-    image: postgis/postgis
+    image: postgres:12.0
     ports:
       - "5432:5432"
     environment:
@@ -27,3 +29,18 @@ services:
     volumes:
       - db:/var/lib/postgresql/data
       - .:/usr/src
+
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
+      - PGADMIN_DEFAULT_PASSWORD=admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+
+volumes:
+  db:
+    name: videogames_data
