(DV-1) feat: remove flake8-import-order and add flake8-isort

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 max-line-length = 88
-exclude = .git,__pycache__,__init__.py,.pytest_cache,alembic
+exclude = .git,__pycache__,__init__.py,.pytest_cache,src/alembic/
 ignore = E203, E266, E501, W503, D100
 max-complexity = 10
-select = B,C,D,E,F,S,W,T4
+select = B,C,D,E,F,,I,S,W,T4
