--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pytest-asyncio==0.14.0
 pylint==2.6.0
 flake8-bugbear==20.1.4
 flake8-docstrings==1.5.0
-#flake8-import-order==0.6
+flake8-isort==4.0.0
 flake8-builtins==1.5.3
 flake8-bandit==2.1.2
 pre-commit==2.8.2
