--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,28 @@
+[tool.poetry]
+name = "db_vgames"
+version = "0.1.0"
+description = "Package for my games database client"
+authors = ["Cristhian Bravo <green2cerberuz@gmail.com>"]
+license = "MIT"
+
+[tool.poetry.dependencies]
+python = "^3.8"
+SQLAlchemy = "=1.3.20"
+fastapi = "=0.61.1"
+pydantic = "=1.7.2"
+starlette = "=0.13.6"
+uvicorn = "=0.12.2"
+python-dotenv = "=0.15.0"
+psycopg2 = "^2.8.4"
+alembic = "=1.4.3"
+
+[tool.poetry.dev-dependencies]
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+
 [tool.isort]
 multi_line_output=3
 include_trailing_comma=true
