(DV-1) feat: add setup for test and test coverage with docker

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,9 @@ repos:
         stages: [prepare-commit-msg]
         language: system
         entry: scripts/prepare-commit-message.sh
+
+      - id: pytest
+        name: pytest
+        stages: [commit]
+        language: system
+        entry: scripts/run_tests.sh
