--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,12 @@ uvicorn = "=0.12.2"
 python-dotenv = "=0.15.0"
 psycopg2 = "^2.8.4"
 alembic = "=1.4.3"
+requests = "=2.24.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "=6.1.2"
+pytest-asyncio = "=0.14.0"
+pytest-cov = "=^2.10.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -35,5 +39,3 @@ disable = "C0330, C0326"
 
 [tool.pylint.format]
 max-line-length = "88"
-
-
