(1.0.0) chore: update .bumpversion.cfg

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,4 +3,4 @@ current_version = 0.0.0
 commit = False
 tag = False
 
-[bumpversion:file:pyproject.toml,VERSION,.bumpversion.cfg]
+[bumpversion:file: pyproject.toml VERSION .bumpversion.cfg]]
