(1.0.0) chore: update files field in .bumpversion.cfg

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,5 +2,4 @@
 current_version = 0.0.0
 commit = False
 tag = False
-
-[bumpversion:file: pyproject.toml VERSION .bumpversion.cfg]]
+files = bumpversion:file:pyproject.toml VERSION .bumpversion.cfg
