(1.0.0) fix: .bumpversion.cfg file

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,4 +2,4 @@
 current_version = 0.0.0
 commit = False
 tag = False
-files = bumpversion:file:pyproject.toml VERSION .bumpversion.cfg
+files = pyproject.toml VERSION .bumpversion.cfg
