--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ python-dotenv = "=0.15.0"
 psycopg2 = "^2.8.4"
 alembic = "=1.4.3"
 requests = "=2.24.0"
+databases= "=0.4.0"
+asyncpg = "=0.21.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "=6.1.2"
