--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "MIT"
 python = "^3.8"
 SQLAlchemy = "=1.3.20"
 fastapi = "=0.61.1"
-pydantic = "=1.7.2"
+pydantic = "^1.7"
 starlette = "=0.13.6"
 uvicorn = "=0.12.2"
 python-dotenv = "=0.15.0"
@@ -18,6 +18,7 @@ alembic = "=1.4.3"
 requests = "=2.24.0"
 databases= "=0.4.0"
 asyncpg = "=0.21.0"
+graphene-sqlalchemy= ">=2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "=6.1.2"
