(DV-12) feat: add support for test and create new db on every test iteration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,9 +28,8 @@ repos:
         stages: [prepare-commit-msg]
         language: system
         entry: scripts/prepare-commit-message.sh
-
-      - id: pytest
-        name: pytest
-        stages: [commit]
-        language: system
-        entry: scripts/run_tests.sh
+      # - id: pytest
+      #   name: pytest
+      #   stages: [commit]
+      #   language: system
+      #   entry: scripts/run_tests.sh
